Hide explorer overflow to prevent scrollbars in iframe

--- a/public/css/explorer/explorer.css
+++ b/public/css/explorer/explorer.css
@@ -9,6 +9,7 @@ body {
   font-size: 12px;
   line-height: 1.1;
 	margin: 0;
+  overflow: hidden;
 	padding: 0;
 }
 
